// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle no access rights 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  code_viewer.no_source_code_displayed_due_to_security
</Alert>
`;

exports[`should handle duplication popup 1`] = `
<Context.Consumer>
  [Function]
</Context.Consumer>
`;

exports[`should render correctly 1`] = `
<div>
  <DeferredSpinner
    ariaLabel="code_viewer.loading"
  />
</div>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <ContextProvider
    key="1-0-0"
    value={
      Object {
        "branchLike": undefined,
        "file": Object {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={Object {}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        Object {
          "actions": Array [],
          "component": "project:main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "key": "1",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 2,
            "endOffset": 15,
            "startLine": 1,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      issuesByLine={Object {}}
      lastSnippetGroup={true}
      loadDuplications={[Function]}
      locations={
        Array [
          Object {
            "component": "project:main.js",
            "index": 0,
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ]
      }
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      snippetGroup={
        Object {
          "component": Object {},
          "locations": Array [
            Object {
              "component": "project:main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "sources": Array [],
        }
      }
    />
  </ContextProvider>
</Fragment>
`;

exports[`should render correctly: no component found 1`] = `
<Fragment>
  <ContextProvider
    key="unknown-0-0"
    value={
      Object {
        "branchLike": undefined,
        "file": Object {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={Object {}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        Object {
          "actions": Array [],
          "component": "test.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "key": "unknown",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      issuesByLine={Object {}}
      lastSnippetGroup={false}
      loadDuplications={[Function]}
      locations={Array []}
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      snippetGroup={
        Object {
          "component": Object {},
          "locations": Array [],
          "sources": Array [],
        }
      }
    />
  </ContextProvider>
  <ContextProvider
    key="unknown-0-1"
    value={
      Object {
        "branchLike": undefined,
        "file": Object {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={Object {}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        Object {
          "actions": Array [],
          "component": "test.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "key": "unknown",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      issuesByLine={Object {}}
      lastSnippetGroup={true}
      loadDuplications={[Function]}
      locations={
        Array [
          Object {
            "component": "project:main.js",
            "index": 0,
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ]
      }
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      snippetGroup={
        Object {
          "component": Object {},
          "locations": Array [
            Object {
              "component": "project:main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "sources": Array [],
        }
      }
    />
  </ContextProvider>
</Fragment>
`;
